# batbox

./: Cargo.toml  README.md  flake.nix
crates/android/src/: lib.rs
crates/batbox-android/: Cargo.toml
crates/batbox-approx/: Cargo.toml
crates/batbox-cli/: Cargo.toml
crates/batbox-cmp/: Cargo.toml
crates/batbox-collection/: Cargo.toml
crates/batbox-collection/derive/: Cargo.toml
crates/batbox-color/: Cargo.toml
crates/batbox-diff/: Cargo.toml
crates/batbox-diff/derive/: Cargo.toml
crates/batbox-diff/derive/src/: lib.rs
crates/batbox-file/: Cargo.toml
crates/batbox-file-dialog/: Cargo.toml
crates/batbox-file/src/: lib.rs
crates/batbox-i18n/: Cargo.toml
crates/batbox-i18n/macro/: Cargo.toml
crates/batbox-la/: Cargo.toml
crates/batbox-lapp/: Cargo.toml
crates/batbox-logger/: Cargo.toml
crates/batbox-num/: Cargo.toml
crates/batbox-preferences/: Cargo.toml
crates/batbox-range/: Cargo.toml
crates/batbox-time/: Cargo.toml
crates/batbox-time/src/: lib.rs
crates/batbox-tuple-macros/: Cargo.toml
crates/cli/src/: lib.rs
crates/cmp/: Cargo.toml
crates/collection/: Cargo.toml
crates/collection/derive/: Cargo.toml
crates/collection/src/: lib.rs
crates/diff/: Cargo.toml
crates/diff/derive/: Cargo.toml
crates/diff/derive/src/: lib.rs
crates/diff/src/: lib.rs
crates/diff/tests/: test.rs
crates/file-dialog/: Cargo.toml
crates/lapp/: Cargo.toml
crates/num/: Cargo.toml
crates/num/src/: real.rs
crates/preferences/: Cargo.toml
crates/preferences/src/: lib.rs
crates/range/: Cargo.toml
crates/tuple-macros/src/: lib.rs
