[package]
name = "batbox-cli"
description = "cli interface"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
log.workspace = true

[target.'cfg(target_arch="wasm32")'.dependencies]
# TODO use web api instead of url?
url.workspace = true
web-sys = { workspace = true, features = ["Window", "Location"] }
