[package]
name = "batbox-i18n"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
batbox-i18n-macro.workspace = true
once_cell.workspace = true
log.workspace = true

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
libc.workspace = true

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { workspace = true, features = ["Window", "Navigator"] }
