[package]
name = "batbox-collection"
description = "Collection of identifiable objects"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
batbox-collection-derive.workspace = true
batbox-diff.workspace = true
serde.workspace = true
