[package]
name = "batbox-lapp"
description = "Linear algebra (batbox-la) extensions"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
batbox-la.workspace = true
batbox-num.workspace = true
batbox-range.workspace = true
batbox-cmp.workspace = true
batbox-approx.workspace = true
