[package]
name = "batbox-num"
description = "num traits"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
rand.workspace = true

[dev-dependencies]
ron.workspace = true
bincode.workspace = true

[target.'cfg(target_arch="wasm32")'.dependencies]
# https://github.com/rust-random/rand#wasm-support
getrandom.workspace = true
