[package]
name = "batbox-preferences"
description = "saving/loading user preferences"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
serde.workspace = true
ron.workspace = true
cfg-if.workspace = true

[target.'cfg(target_os="android")'.dependencies]
batbox-android.workspace = true

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
directories.workspace = true

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { workspace = true, features = ["Window", "Storage"] }
