[package]
name = "batbox-diff-derive"
description = "batbox-diff derive macros"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
darling.workspace = true

[lib]
proc-macro = true
